docs: improve .env.example with detailed documentation and structure

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,36 @@
-# Supabase Configuration
-VITE_SUPABASE_URL=your_supabase_project_url
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+# ============================================
+# VIBE PROMPTING - ENVIRONMENT VARIABLES
+# ============================================
+# Copy this file to .env and fill in your actual values
+# Never commit .env to version control!
+
+# ============================================
+# SUPABASE CONFIGURATION (Required)
+# ============================================
+# Get these from: https://app.supabase.com/project/_/settings/api
+VITE_SUPABASE_URL=your_supabase_project_url_here
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
+# ============================================
+# AI API KEYS (Choose at least ONE)
+# ============================================
+
+# Option 1: Google Gemini API (Recommended)
+# - FREE tier available with generous limits
+# - Get your key from: https://aistudio.google.com/apikey
+# - Used as primary AI model (Gemini 2.0 Flash)
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
+
+# Option 2: OpenRouter API (Fallback)
+# - FREE $1 credit + access to multiple models
+# - Get your key from: https://openrouter.ai/keys
+# - Used as fallback (Llama 3.2 3B Instruct)
+VITE_OPENROUTER_API_KEY=your_openrouter_api_key_here
+
+# ============================================
+# NOTES:
+# ============================================
+# - You need at least ONE AI API key for the app to work
+# - Gemini is recommended for better results
+# - OpenRouter is used as backup if Gemini fails
+# - All keys are prefixed with VITE_ for Vite to expose them to the client
