--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@splinetool/runtime": "^1.11.2",
     "@supabase/supabase-js": "^2.81.1",
     "@tanstack/react-query": "^5.90.8",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.553.0",
