--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,24 +1,14 @@
-sonar.projectKey=Addy-shetty_Vibe-Prompting_3ea74998-7189-4e3e-a7e0-8be5ce3a3a3c
+sonar.projectKey=Addy-shetty_Vibe-Prompting
+sonar.organization=addy-shetty
 
-# Local SonarQube configuration
-sonar.host.url=http://localhost:9000
 
-# Project metadata
-sonar.projectName=Vibe Prompting
-sonar.projectVersion=1.0.0
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=Vibe-Prompting
+#sonar.projectVersion=1.0
 
-# Source code location
-sonar.sources=src
-sonar.tests=src
-sonar.test.inclusions=**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx
 
-# Exclusions
-sonar.exclusions=**/node_modules/**,**/dist/**,**/build/**,**/*.config.ts,**/*.config.js,**/coverage/**,**/docs/**,**/supabase/**
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
 
-# TypeScript/JavaScript settings
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.typescript.tsconfigPath=tsconfig.json
-
-# Encoding
-sonar.sourceEncoding=UTF-8
-
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
