fix: add Deno type definitions for Edge Functions
- Update deno.json with proper Deno namespaces
- Add function-level deno.json configuration
- Include Edge Runtime types for TypeScript
- Resolve 'Cannot find name Deno' errors

--- a/supabase/functions/deno.json
+++ b/supabase/functions/deno.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
     "strict": true,
-    "lib": ["deno.window"]
+    "lib": ["deno.window", "deno.ns", "esnext"],
+    "types": ["https://deno.land/x/edge_runtime/index.d.ts"]
   },
   "imports": {
-    "std/": "https://deno.land/std@0.168.0/"
+    "std/": "https://deno.land/std@0.224.0/"
   }
 }
